model_nvidia_nim/deploy_nim_s3/deploy_init_s3_model.yaml
---
apiVersion: apps/v1       # latest stable
kind: Deployment
metadata:
  name: test-model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-model
  template:
    metadata:
      labels:
        app: test-model
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-0-48-141.us-east-2.compute.internal
      containers:
      - name: llama3-8b-instruct
        image: nvcr.io/nim/meta/llama-3.2-1b-instruct:1.8.6
        args:
          - sleep
          - 1000s
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: model-data
            mountPath: /mnt        
      imagePullSecrets:
      - name: nim-pull-secret
      volumes:
        - name: aws-conf
          emptyDir: {}   # writable storage 
        - name: model-data
          persistentVolumeClaim:
            claimName: pvc-model-store
