model_nvidia_nim/deploy_nim_s3/llama3-2-1b_all_resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama3-2-1b-instruct
  labels:
    app: llama3-2-1b-instruct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama3-2-1b-instruct
  template:
    metadata:
      labels:
        app: llama3-2-1b-instruct
    spec:
      containers:
      - name: llama3-2-1b-instruct
        image: nvcr.io/nim/meta/llama-3.2-1b-instruct:1.8.6
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: llama3-2-1b-nim-cache
          mountPath: /opt/nim/.cache
        resources:
          limits:
            cpu: "8"
            memory: 24Gi
            nvidia.com/gpu: "1"
          requests: 
            cpu: "6"
      volumes:
      - name: llama3-2-1b-nim-cache
        persistentVolumeClaim:
          claimName: llama3-2-1b-nim-cache
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      imagePullSecrets:
      - name: nim-pull-secret
---
kind: Service
apiVersion: v1
metadata:
  name: llama3-2-1b-instruct
  labels:
    app: llama3-2-1b-instruct
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llama3-2-1b-instruct
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llama3-2-1b-instruct
  labels:
    app: llama3-2-1b-instruct
spec:
  to:
    kind: Service
    name: llama3-2-1b-instruct
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
  wildcardPolicy: None
